--- a/boat-better-app/src/App.css
+++ b/boat-better-app/src/App.css
@@ -1,19 +1,48 @@
+body{
+  background-color: #A3D2CA;
+  color:#F7F3E9
+}
+
 .header{
   display: flex;
+  background-color: #5EAAA8 ;
+  color: #F7F3E9;
+  justify-content: center;
+  border-bottom: 6px solid #F05945;
+  font-family:Verdana, Geneva, Tahoma, sans-serif
 }
 
 span{
   font-size: 50px;
 }
 
+h3 {
+  color:#F05945;
+  background-color:  ;
+}
+
+button {
+  background-color: #F05945;
+  color: #F7F3E9;
+  border: none;
+  font-family: 'Arial Narrow Bold', sans-serif;
+}
+
+.location-form {
+  display: grid;
+  
+}
+
+.days {
+  background-color: #5EAAA8;
+  border: 3px solid #F05945;
+  margin: 5px;
+  color: #F7F3E9;
+
+}
 
 .display-cards {
   display: flex;
   flex-wrap:wrap;
   width: 100%;
-}
-
-.days {
-  border: 1px solid black;
-  margin: 5px;
 }
